webApp.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: webapp
  
spec:
  selector:
    matchLabels:
      mylabelName: yoogeshWebapp
      
  replicas: 1
  
  template:
    metadata:
      name: webapp
      labels:
        mylabelName: yoogeshWebapp
    spec:
      containers:
      - name: webapp
        image: yoogesh1983/springbootsecurity:latest
        
---

apiVersion: v1
kind: Service

metadata:
  name: twm-webapp
  
spec:
 selector:
   mylabelName: yoogeshWebapp
   
 ports:
   - name: http
     port: 80
     targetPort: 8080
     
 type: LoadBalancer
