ingress_private.yaml
##################################################################################################
# This is Ingress Controller Configuration
# from version 2.24 of k8s [You can check the current version using 'kubectl version']
##################################################################################################  

apiVersion: networking.k8s.io/v1beta1

kind: Ingress

metadata:
  name: private-routing
  annotations:
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: yoogeshcredential
     nginx.ingress.kubernetes.io/auth-realm: "***** WARNING:ONLY THE ADMINISTRATOR CAN OPEN THIS WEBSITE *****"

spec:
  rules:
    - host: admin.fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: yoogesh-httpd-server
              servicePort: 80
