ingress_webapp.yaml
##################################################################################################
# This is Ingress Controller Configuration
# from version 2.24 of k8s [You can check the current version using 'kubectl version']
##################################################################################################  

apiVersion: networking.k8s.io/v1beta1

kind: Ingress

metadata:
  name: webapp-routing

spec:
  rules:
    - host: fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: twm-webapp
              servicePort: 80
              
    - host: prometheus.fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: monitoring-prometheus-oper-prometheus
              servicePort: 9090
              
    - host: grafana.fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: monitoring-grafana
              servicePort: 80
